chore:fixing bdd
